Small edit to notebook

--- a/computational-tools-2020.ipynb
+++ b/computational-tools-2020.ipynb
@@ -8,13 +8,19 @@
     }
    },
    "source": [
-    "# Hello!"
+    "# Computational tools for social scientists\n",
+    "## Jupyter and Julia\n",
+    "### Ivan Rudik"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": []
   }
