Add part on interpreted langauges.

--- a/jupyter-julia-intro.ipynb
+++ b/jupyter-julia-intro.ipynb
@@ -14,19 +14,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "using Plots"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -623,7 +610,7 @@
     "**Compiled:** Julia is translated to machine code by a **just-in-time** compiler, makes it faster than intepreted languages like R or Python (Julia, C variants, Java, FORTRAN)\n",
     "- Julia typically gains its speed after a pre-compile of your functions\n",
     "\n",
-    "**Interpreted:**\n",
+    "**Interpreted:** These langauges execute instructions freely without being compiled beforehand. This gives a lot of flexibility, allows for more interactive coding.\n",
     "\n",
     "This combination of dynamic + compiled is relatively rare and lets you have speed of C/FORTRAN with the interactiveness and flexibility of R, Python, Stata (interpreting code at runtime has a lot of overhead $\\rightarrow$ slow)\n",
     "\n",
