remove pkg enviro

--- a/jupyter-julia-intro.ipynb
+++ b/jupyter-julia-intro.ipynb
@@ -42,9 +42,9 @@
    "execution_count": 1,
    "source": [
     "# Load up Julia environment\n",
-    "using Pkg\n",
-    "Pkg.activate(\".\")\n",
-    "Pkg.instantiate()"
+    "# using Pkg\n",
+    "# Pkg.activate(\".\")\n",
+    "# Pkg.instantiate()"
    ],
    "outputs": [
     {
@@ -368,69 +368,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Why Julia\n",
-    "\n",
-    "Who should think about using Julia?\n",
-    "\n",
-    "Why should you use Julia?"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Why Julia\n",
-    "\n",
-    "Julia is made for scientific computing\n",
-    "\n",
-    "Julia has a unique combination of ease and speed"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Speed\n",
-    "\n",
-    "**It is rather fast under standard benchmarks**\n",
-    "\n",
-    "![julia, super fast](images/julia_basic_speeds.png)"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Speed\n",
-    "\n",
-    "**It is fast for econ problems**\n",
-    "\n",
-    "![julia, super fast](images/julia_econ_speeds.png)"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "# Reproducibility\n",
     "\n",
-    "Julia makes reproducibility and versioning way easier than other languages because of the package manager `Pkg` and the IDE Atom\n",
+    "Julia makes reproducibility and versioning very easy with the package manager `Pkg`\n",
     "\n",
     "All you need to do is activate your project `Pkg.activate(\"directory_here\")` and it generates `.toml` files that give the unique GitHub SHA hashes for the package versions and all dependencies\n",
     "\n",
@@ -477,38 +417,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Who should use Julia?\n",
-    "\n",
-    "Macro, IO, structural people mostly: those who generally might code up their own stuff from scratch or have a serious need for speed\n",
-    "\n",
-    "Anything that is traditionally done in MATLAB or Python can be done faster and cleaner in Julia\n",
-    "\n",
-    "ML package ecosystem is also getting pretty decent but it won't always have the econ versions for things (e.g. double selection LASSO)"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "The applied micro package ecosystem is not as developed as Stata or R\n",
-    "\n",
-    "I wouldn't recommend Julia if people in your field typically use Stata and you're only working with $N\\approx 10^5-10^6$\n",
-    "\n",
-    "If you have a need to run high dimensional fixed effects models it's probably easier to call `fixest::feols` in R using shell commands in Stata than learning Julia"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "# What is Julia?\n",
     "\n",
     "Distinctive aspects of Julia's design include a type system with parametric polymorphism in a **dynamic programming language**; with **multiple dispatch** as its core programming paradigm [...] Julia uses a **just-in-time (JIT) compiler** that is referred to as \"just-ahead-of-time\" (JAOT) in the Julia community, as Julia compiles (on default settings) to machine code before running it."
@@ -543,78 +451,6 @@
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Basic Julia features that get you C speed with dynamic typing"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Parametric types\n",
-    "\n",
-    "Julia has what is known as *parametric types*"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "source": [
-    "struct FooParam{t1 <: Real, t2 <: Real, t3 <: AbstractArray{<:Real}}\n",
-    "   a::t1\n",
-    "   b::t2\n",
-    "   c::t3\n",
-    " end\n",
-    "newfoo_para = FooParam(1.0, 7, [1., 4., 6.])\n",
-    "\n",
-    "newfoo_para.a"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "This allows you to define variable types that are specific to your problem (e.g. a `Real`, a `Real`, an `Array` of `Real`s)\n",
-    "\n",
-    "It allows you to maintain flexibility by declaring **abstract types**\n",
-    "\n",
-    "When code is compiled, Julia will be able to deliver type-specific functions (e.g. it knows ahead of time to use `Float64` libraries) even with the abstract types\n",
-    "\n",
-    "This is part of how you get C speeds with dynamic typing"
-   ],
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
     }
    }
   },
