--- a/jupyter-julia-intro.ipynb
+++ b/jupyter-julia-intro.ipynb
@@ -41,10 +41,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# Load up Julia environment\n",
-    "# using Pkg\n",
-    "# Pkg.activate(\".\")\n",
-    "# Pkg.instantiate()"
+    "Load up Julia environment\n",
+    "using Pkg\n",
+    "Pkg.activate(\".\")\n",
+    "Pkg.instantiate()"
    ],
    "outputs": [
     {
