fix notebook error

--- a/jupyter-julia-intro.ipynb
+++ b/jupyter-julia-intro.ipynb
@@ -39,19 +39,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
-    "Load up Julia environment\n",
+    "# Load up Julia environment\n",
     "using Pkg\n",
     "Pkg.activate(\".\")\n",
     "Pkg.instantiate()"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m environment at `~/Desktop/git/computational-tools-workshop/Project.toml`\n"
+     "output_type": "error",
+     "ename": "LoadError",
+     "evalue": "syntax: extra token \"up\" after end of expression",
+     "traceback": [
+      "syntax: extra token \"up\" after end of expression",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[1]:1",
+      " [2] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1116"
      ]
     }
    ],
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "using Plots\n",
     "x = collect(range(.1, stop = .2, length = 10)) # generate evenly spaced grid\n",
@@ -88,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "# Get corresponding quantity values at these prices\n",
     "y = demand(x)\n",
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "# This is a code cell\n",
     "# Press cmd+enter to run, shift+enter to run and move to the next cell\n",
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "# Cells can reference variables defined in previous cells\n",
     "\n",
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "#You can have slightly more complicated expressions and computations\n",
     "using Random\n",
@@ -480,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "source": [
     " using LinearAlgebra               # necessary for I\n",
     " function sametypes(x)\n",
@@ -511,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "# Generic coding infrastructure\n",
     "x = [5.5, 7.0, 3.1];\n",
@@ -546,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "@code_warntype sametypes(x)"
    ],
@@ -585,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "@code_warntype sametypes(y)"
    ],
@@ -643,9 +652,9 @@
   },
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Julia 1.6.2",
+   "display_name": "Julia 1.1.0",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.1"
   },
   "language_info": {
    "file_extension": ".jl",
